fix: editor layout on mobile devices

--- a/src/styles/pages/create.scss
+++ b/src/styles/pages/create.scss
@@ -62,10 +62,15 @@
     height: 100%;
 
     // Make the dynamic card editor fill the container, but keep its aspect ratio
-    & > [role='application'],
-    & > canvas {
-      height: 100%;
-      width: auto;
+    & > canvas,
+    & > [role='application'] {
+      width: 100%;
+      height: auto;
+
+      @media (min-aspect-ratio: 1/1) {
+        height: 100%;
+        width: auto;
+      }
     }
   }
 
